[tool.poetry]
name = "exploring-neos"
version = "0.1.0"
description = "A command-line tool that let the user inspect and query NEOs from NASA/JPL database."
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "UNLICENSED"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
